--- a/style/home.css
+++ b/style/home.css
@@ -349,8 +349,75 @@ p.section-blanche2{
     text-align: justify;
 }
 
+.cameras-polar{
+    margin-bottom: 30px;
+}
+.petit-images{
+    height: 600px;
+    width: 400px;
+    margin-bottom: 30px;
+}
+
+div.finish{
+    background-color:rgba(235, 235, 235, 0.4);
+    height: 200px;
+    
+}
 
 
+/*       FINISH       */ 
+.publicite-2{
+    padding-top: 10px;
+}
+.imvia-logo-2{
+    height: 70px;
+    width: auto;
+    position: relative;
+    margin-left: 25px;
+}
+.universite-logo-2{
+    height: 70px;
+    width: auto;
+    position: relative; 
+    margin-left: 15px;
+}
+.cerema-logo-2{
+    height: 90px;
+    width: auto;
+    position: relative; 
+    margin-left: 10px;
+}
+.vibot-logo-2{
+    height: 70px;
+    width: auto;
+    position: relative; 
+    margin-left: 15px;
+}
+
+.cnrs-logo-2{
+    height: 70px;
+    width: auto;
+    position: relative; 
+    margin-left: 15px;
+    margin-right: 15px;
+    bottom: 120px;
+}
+
+.par-finish{
+    text-align: center;
+    margin-bottom: 10px;
+    margin-left: 50px;
+}
+div.barre-horizontale{
+    height: 1px;
+    width: 35%;
+    background-color: rgb(53, 53, 53);
+    margin-top: 8px;
+    margin-bottom: 50px;
+    margin-left: 32.5%;
+    margin-right: auto;
+
+}
 
 
 
@@ -460,11 +527,53 @@ p.section-blanche2{
     div.section-grise3 {
         padding-bottom: 50px;
     }
+    div.finish{
+        height: 300px;
+    }
+    .publicite-2{
+        padding-top: 10px;
+    }
+    .imvia-logo-2{
+        height: 40px;
+    }
+    .universite-logo-2{
+        height: 40px;
+    }
+    .cerema-logo-2{
+        height: 50px;
+    }
+    .vibot-logo-2{
+        height: 40px;
+    }
+    
+    .cnrs-logo-2{
+        height: 40px;
+        bottom: 120px;
+        margin-top: 50px;
+
+    }
+    
+    .par-finish{
+        text-align: center;
+        margin-right: 60px;
+        margin-bottom: 10px;
+        margin-top: 10px;
+        margin-left: 50px;
+    }
+    .petit-images{
+        width: 100%;
+        height: 100%;
+        padding-top: 15px;
+
+    }
  
 }
 
 
 @media only screen and (min-width: 767px) and (max-width: 1000px){
+    body{
+        max-width: 665px; 
+    }
     header{
         background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.5)),url(images/cover_overlay.png)no-repeat center,url(images/drone-1920.jpg) no-repeat center;
         background-size: 1000px;
@@ -536,7 +645,7 @@ p.section-blanche2{
         margin-left: 10px;
     }
     .publicite{
-        margin-top: -9px ;
+        margin-top: 100px ;
         margin-bottom: auto;
     }
     div.section-grise1 {
@@ -571,5 +680,4 @@ p.section-blanche2{
     }
    
 }
-
 
